--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,3 +6,4 @@ importFrom(tools,md5sum)
 importFrom(utils,installed.packages)
 importFrom(utils,packageDate)
 importFrom(utils,sessionInfo)
+importFrom(utils,write.table)
