--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,5 +5,6 @@ export(package_md5sum)
 importFrom(tools,md5sum)
 importFrom(utils,installed.packages)
 importFrom(utils,packageDate)
+importFrom(utils,packageVersion)
 importFrom(utils,sessionInfo)
 importFrom(utils,write.table)
