--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,7 @@ export(codeinfo)
 export(package_md5sum)
 importFrom(tools,md5sum)
 importFrom(utils,installed.packages)
-importFrom(utils,packageDate)
+importFrom(utils,packageDescription)
 importFrom(utils,packageVersion)
 importFrom(utils,sessionInfo)
 importFrom(utils,write.table)
